[package]
name = "grips"
version = "0.0.0"
authors = ["Mike Clarke <clarkema@clarkema.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdns = "1.1.0"
tokio = { version = "0.2.4", features = ["full"] }
futures-util = "0.3"
